alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -650,7 +650,7 @@ text {
 # About Us
 --------------------------------------------------------------*/
 .about {
-  padding: 150px 0 0px;
+  padding: 150px;
   background: #fffbf7;
   position: relative;
 }
@@ -686,6 +686,7 @@ text {
   word-spacing: 0.2rem;
   line-height: 1.8rem;
   text-align: left;
+  margin-left: 0px;
 }
 
 @media (max-width: 992px) {
@@ -711,7 +712,7 @@ text {
 --------------------------------------------------------------*/
 .services .section-title .small {
   margin-top: -35px;
-  font-size: 16px;
+  font-size: 17px;
   font-weight: 300;
 }
 .services .icon-box {
@@ -753,6 +754,9 @@ text {
 }
 
 @media (max-width: 769px) {
+  .services .section-title .small {
+    text-align: left;
+  }
 }
 
 #services {
@@ -783,8 +787,9 @@ text {
 }
 
 .cta p {
-  font-size: 18px;
+  font-size: 17px;
   color: #fff;
+  margin-left: 0px;
 }
 
 .cta .cta-btn {
@@ -832,18 +837,16 @@ text {
 
 .why-us title,
 text {
-  padding: 5px 15px;
+  text-align: left;
   text-align: left;
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 700;
   color: #bf7330;
 }
-.card-body {
-  padding: 0 10px !important;
-}
+
 .why-us title,
 p {
-  padding: 15px 15px;
+  margin-left: -14px;
   font-weight: 400;
   font-size: 17px;
 }
@@ -909,8 +912,8 @@ p {
 }
 
 .testimonials .member p {
-  margin: 10px 0 0 0;
-  font-size: 15px;
+  margin: 15px 0 0 -0px;
+  font-size: 17px;
 }
 
 .testimonials .bi {
@@ -971,7 +974,7 @@ h4 {
   display: block;
   position: relative;
   font-family: "Poppins", sans-serif;
-  font-size: 16px;
+  font-size: 17px;
   line-height: 24px;
   font-weight: 500;
   padding: 0 30px;
@@ -996,9 +999,9 @@ h4 {
 }
 
 .faq .faq-list p {
-  font-size: 14px;
+  font-size: 17px;
   font-weight: 500;
-  margin-bottom: 0;
+  margin-left: 31px;
   padding: 10px 0 0 0;
 }
 
@@ -1043,7 +1046,6 @@ h4 {
 }
 
 .contact:before {
-  content: "";
   background: rgba(97, 96, 96, 0.4);
   position: absolute;
   bottom: 0;
@@ -1054,6 +1056,10 @@ h4 {
 
 .contact .container {
   position: relative;
+}
+
+.cont-cta p {
+  margin-left: 0px;
 }
 
 .contact .info {
@@ -1084,8 +1090,8 @@ h4 {
 
 .contact .info p {
   padding: 0 0 0 60px;
-  margin-bottom: 0;
-  font-size: 14px;
+  margin-left: 1px;
+  font-size: 17px;
   color: #444444;
 }
 
@@ -1096,6 +1102,7 @@ h4 {
 
 .btn-submit {
   color: #ecf6fe;
+  font-weight: 700;
   border: 3px solid #bc6c25;
 }
 
@@ -1180,7 +1187,7 @@ h4 {
 #footer .footer-top .footer-info p {
   font-size: 14px;
   line-height: 24px;
-  margin-bottom: 0;
+  margin: 0 0 0 0px;
   font-family: "Raleway", sans-serif;
   color: #fff;
 }
@@ -1222,7 +1229,7 @@ h4 {
 #footer .footer-top .footer-links ul {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0 0 -16px;
 }
 
 #footer .footer-top .footer-links ul i {
@@ -1260,9 +1267,10 @@ h4 {
 #footer .footer-top .footer-contact p {
   line-height: 26px;
   font-size: 14px;
+  margin-left: 0px;
 }
 
-#footer .copyright {
+#footer .footer-top .footer-info #footer .copyright {
   text-align: center;
   padding-top: 30px;
 }
